--- a/xxl-sso-samples/xxl-sso-token-sample-springboot/src/main/resources/application.properties
+++ b/xxl-sso-samples/xxl-sso-token-sample-springboot/src/main/resources/application.properties
@@ -3,7 +3,9 @@ server.port=8082
 server.context-path=/xxl-sso-token-sample-springboot
 
 ### xxl-sso
-xxl.sso.server=http://xxlssoserver.com:8080/xxl-sso-server
+xxl.sso.server=http://127.0.0.1:8080/xxl-sso-server
 xxl.sso.logout.path=/logout
 xxl-sso.excluded.paths=
-xxl.sso.redis.address=redis://127.0.0.1:6379
+xxl.sso.token.check=http://127.0.0.1:8080/xxl-sso-server/tokenCheck
+xxl.sso.token.logout=http://127.0.0.1:8080/xxl-sso-server/tokenLogout
+#xxl.sso.redis.address=redis://xxl-sso:123456@111.7.172.183:18081/0
