--- a/xxl-sso-samples/xxl-sso-web-sample-springboot/src/main/resources/application.properties
+++ b/xxl-sso-samples/xxl-sso-web-sample-springboot/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
 
 ### xxl-sso
-xxl.sso.server=http://xxlssoserver.com:8080/xxl-sso-server
+xxl.sso.server=http://192.168.3.105:8080/xxl-sso-server
 xxl.sso.logout.path=/logout
 xxl-sso.excluded.paths=
-xxl.sso.redis.address=redis://127.0.0.1:6379
+xxl.sso.token.check=http://192.168.3.105:8080/xxl-sso-server/tokenCheck
 
