--- a/xxl-sso-server/src/main/resources/application.properties
+++ b/xxl-sso-server/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.freemarker.request-context-attribute=request
 spring.freemarker.settings.number_format=0.##########
 
 ### xxl-sso
-xxl.sso.redis.address=redis://127.0.0.1:6379
+xxl.sso.redis.address=redis://xxl-sso:123456@111.7.172.183:18081/0
 xxl.sso.redis.expire.minute=1440
