--- a/xxl-sso-samples/xxl-sso-web-sample-springboot/pom.xml
+++ b/xxl-sso-samples/xxl-sso-web-sample-springboot/pom.xml
@@ -44,11 +44,11 @@
         </dependency>
 
         <!-- xxl-sso-core -->
-        <dependency>
+         <dependency>
             <groupId>com.xuxueli</groupId>
             <artifactId>xxl-sso-core</artifactId>
             <version>${parent.version}</version>
-        </dependency>
+        </dependency> 
 
         <!-- devtools -->
         <dependency>
@@ -57,7 +57,12 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
+<dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
